--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 				</tr>
 			</thead>
 			<tbody></tbody>
+			<tfoot></tfoot>
 		</table>
 		<div id="modal" class="hidden">
 			<div id="modal-content">
